// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Video Element YouTube renders a youtube iframe 1`] = `
<body>
  <div>
    <iframe
      allow="autoplay; encrypted-media"
      allowfullscreen=""
      data-testid="stVideo"
      frameborder="0"
      height="528"
      src="https://www.w3schools.com/html/mov_bbb.mp4"
      title="https://www.w3schools.com/html/mov_bbb.mp4"
      width="0"
    />
  </div>
</body>
`;

exports[`Video Element YouTube renders a youtube iframe with an starting time 1`] = `
<body>
  <div>
    <iframe
      allow="autoplay; encrypted-media"
      allowfullscreen=""
      data-testid="stVideo"
      frameborder="0"
      height="528"
      src="https://www.w3schools.com/html/mov_bbb.mp4?start=10"
      title="https://www.w3schools.com/html/mov_bbb.mp4"
      width="0"
    />
  </div>
</body>
`;
